--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {
-		"test": "npm run lint && node --harmony --es-staging test.js && npm run security",
+		"pretest": "npm run lint",
+		"test": "npm run tests-only",
+		"tests-only": "node --harmony --es-staging test",
+		"posttest": "npm run security",
 		"coverage": "covert test.js",
-		"coverage-quiet": "covert test.js --quiet",
 		"lint": "npm run jscs && npm run eslint",
 		"jscs": "jscs test.js *.js",
 		"eslint": "eslint test.js *.js",
@@ -60,4 +62,3 @@
 		"node": ">= 0.4"
 	}
 }
-
