--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"lint": "npm run jscs && npm run eslint",
 		"jscs": "jscs test.js *.js",
 		"eslint": "eslint test.js *.js",
-		"security": "nsp package"
+		"security": "nsp check"
 	},
 	"repository": {
 		"type": "git",
@@ -29,16 +29,16 @@
 	],
 	"dependencies": {},
 	"devDependencies": {
-		"foreach": "^2.0.5",
-		"is": "^3.1.0",
-		"tape": "^4.2.1",
-		"indexof": "^0.0.1",
+		"@ljharb/eslint-config": "^12.2.1",
 		"covert": "^1.1.0",
-		"jscs": "^2.2.1",
-		"nsp": "^1.1.0",
-		"eslint": "^1.6.0",
-		"@ljharb/eslint-config": "^1.3.0",
-		"semver": "^5.0.3"
+		"eslint": "^4.8.0",
+		"foreach": "^2.0.5",
+		"indexof": "^0.0.1",
+		"is": "^3.2.1",
+		"jscs": "^3.0.7",
+		"nsp": "^2.8.1",
+		"semver": "^5.4.1",
+		"tape": "^4.8.0"
 	},
 	"testling": {
 		"files": "test.js",
