--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
 		"pretest": "npm run lint",
 		"test": "npm run tests-only",
 		"tests-only": "node --harmony --es-staging test",
-		"posttest": "npm run security",
+		"posttest": "npm run audit",
 		"coverage": "covert test.js",
 		"lint": "eslint test.js *.js",
-		"security": "nsp check"
+		"preaudit": "npm install --package-lock --package-lock-only",
+		"audit": "npm audit",
+		"postaudit": "rm package-lock.json"
 	},
 	"repository": {
 		"type": "git",
@@ -33,7 +35,6 @@
 		"foreach": "^2.0.5",
 		"indexof": "^0.0.1",
 		"is": "^3.2.1",
-		"nsp": "^3.2.1",
 		"semver": "^5.5.0",
 		"tape": "^4.9.0"
 	},
