--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
 		"pretest": "npm run lint",
 		"test": "npm run tests-only",
 		"tests-only": "node --harmony --es-staging test",
-		"posttest": "npm run audit",
+		"posttest": "npx aud",
 		"coverage": "covert test.js",
-		"lint": "eslint test.js *.js",
-		"preaudit": "npm install --package-lock --package-lock-only",
-		"audit": "npm audit",
-		"postaudit": "rm package-lock.json"
+		"lint": "eslint ."
 	},
 	"repository": {
 		"type": "git",
