--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 	"dependencies": {},
 	"devDependencies": {
 		"@ljharb/eslint-config": "^16.0.0",
-		"auto-changelog": "^1.16.3",
+		"aud": "^1.1.1",
+		"auto-changelog": "^2.0.0",
 		"covert": "^1.1.1",
 		"eslint": "^6.8.0",
 		"foreach": "^2.0.5",
