--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"pretest": "npm run lint",
 		"test": "npm run tests-only",
 		"tests-only": "node --harmony --es-staging test",
-		"posttest": "npx aud --production",
+		"posttest": "aud --production",
 		"coverage": "covert test/index.js",
 		"lint": "eslint .",
 		"version": "auto-changelog && git add CHANGELOG.md",
@@ -32,16 +32,16 @@
 	],
 	"dependencies": {},
 	"devDependencies": {
-		"@ljharb/eslint-config": "^16.0.0",
-		"aud": "^1.1.1",
-		"auto-changelog": "^2.0.0",
+		"@ljharb/eslint-config": "^17.2.0",
+		"aud": "^1.1.2",
+		"auto-changelog": "^2.2.0",
 		"covert": "^1.1.1",
-		"eslint": "^6.8.0",
+		"eslint": "^7.9.0",
 		"foreach": "^2.0.5",
 		"indexof": "^0.0.1",
 		"is": "^3.3.0",
 		"safe-publish-latest": "^1.1.4",
-		"tape": "^5.0.0-next.5"
+		"tape": "^5.0.1"
 	},
 	"testling": {
 		"files": "test/index.js",
@@ -69,6 +69,7 @@
 		"template": "keepachangelog",
 		"unreleased": false,
 		"commitLimit": false,
-		"backfillLimit": false
+		"backfillLimit": false,
+		"hideCredit": true
 	}
 }
