[Fix] do not use `Object.prototype.toString` when `Symbol.toStringTag` is shammed

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
 		"prepublishOnly": "safe-publish-latest",
 		"prepublish": "not-in-publish || npm run prepublishOnly",
 		"pretest": "npm run lint",
-		"test": "npm run tests-only",
+		"test": "npm run tests-only && npm run test:corejs",
 		"tests-only": "nyc tape 'test/**/*.js'",
+		"test:corejs": "nyc tape test-corejs.js",
 		"posttest": "aud --production",
 		"lint": "eslint .",
 		"version": "auto-changelog && git add CHANGELOG.md",
@@ -34,6 +35,7 @@
 		"@ljharb/eslint-config": "^17.6.0",
 		"aud": "^1.1.5",
 		"auto-changelog": "^2.2.1",
+		"core-js": "^3.12.0",
 		"eslint": "^7.26.0",
 		"foreach": "^2.0.5",
 		"indexof": "^0.0.1",
