[Fix] use `has-tostringtag` to behave correctly in the presence of symbol shams
See https://github.com/inspect-js/is-date-object/issues/22

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
 		"@@toStringTag",
 		"Date object"
 	],
+	"dependencies": {
+		"has-tostringtag": "^1.0.0"
+	},
 	"devDependencies": {
 		"@ljharb/eslint-config": "^17.6.0",
 		"aud": "^1.1.5",
