--- a/package.json
+++ b/package.json
@@ -35,17 +35,17 @@
 		"has-tostringtag": "^1.0.0"
 	},
 	"devDependencies": {
-		"@ljharb/eslint-config": "^20.0.0",
-		"aud": "^1.1.5",
-		"auto-changelog": "^2.3.0",
+		"@ljharb/eslint-config": "^21.0.0",
+		"aud": "^2.0.1",
+		"auto-changelog": "^2.4.0",
 		"core-js": "^3.19.3",
-		"eslint": "^8.4.1",
-		"foreach": "^2.0.5",
+		"eslint": "=8.8.0",
+		"in-publish": "^2.0.1",
 		"indexof": "^0.0.1",
 		"is": "^3.3.0",
 		"nyc": "^10.3.2",
 		"safe-publish-latest": "^2.0.0",
-		"tape": "^5.3.2"
+		"tape": "^5.6.1"
 	},
 	"testling": {
 		"files": "test/index.js",
