--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"test": "npm run tests-only && npm run test:corejs",
 		"tests-only": "nyc tape 'test/**/*.js'",
 		"test:corejs": "nyc tape test-corejs.js",
-		"posttest": "aud --production",
+		"posttest": "npx npm@'>= 10.2' audit --production",
 		"lint": "eslint --ext=js,mjs .",
 		"version": "auto-changelog && git add CHANGELOG.md",
 		"postversion": "auto-changelog && git add CHANGELOG.md && git commit --no-edit --amend && git tag -f \"v$(node -e \"console.log(require('./package.json').version)\")\""
@@ -37,7 +37,6 @@
 	},
 	"devDependencies": {
 		"@ljharb/eslint-config": "^21.0.0",
-		"aud": "^2.0.1",
 		"auto-changelog": "^2.4.0",
 		"core-js": "^3.19.3",
 		"eslint": "=8.8.0",
