--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@ljharb/eslint-config": "^21.1.1",
 		"auto-changelog": "^2.5.0",
 		"core-js": "^3.39.0",
+		"encoding": "^0.1.13",
 		"eslint": "=8.8.0",
 		"in-publish": "^2.0.1",
 		"indexof": "^0.0.1",
